--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -454,7 +454,7 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
                   <executable>pep8</executable>
                   <arguments>
 		    <argument>-v</argument>
-		    <argument>--exclude=filelock.py,test_command.py</argument>
+		    <argument>--exclude=filelock.py,test_command.py,test_commands.py</argument>
                     <argument>${project.basedir}/../tools/sync</argument>
                   </arguments>
                 </configuration>
