--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -26,15 +26,15 @@ Portions Copyright (c) 2017-2018, Chris Fraire <cfraire@me.com>.
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.opensolaris.opengrok</groupId>
-    <artifactId>opengrok-indexer</artifactId>
+    <artifactId>opengrok</artifactId>
     <packaging>jar</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1-rc1006</version>
     <name>OpenGrok Indexer</name>
 
     <parent>
         <groupId>org.opensolaris.opengrok</groupId>
-        <artifactId>opengrok</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <artifactId>opengrok-top</artifactId>
+        <version>1.1-rc1006</version>
     </parent>
 
     <build>
@@ -323,62 +323,62 @@ Portions Copyright (c) 2017-2018, Chris Fraire <cfraire@me.com>.
                     </execution>
                 </executions>
             </plugin>
-            
+
             <!--  add the same fix as is in build.xml to patch jflex generated files to stop increasing buffer beyond token size that lucene accepts
             https://github.com/OpenGrok/OpenGrok/issues/1170 make parsers stop producing tokens > 32766 chars
             at least for PlainFullTokenizer, PlainSymbolTokenizer, JavaScriptSymbolTokenizer, JavaSymbolTokenizer
-            use below  
-            
+            use below
+
             DON'T forget to SYNC this with ../build.xml !!!
-            
+
             -->
- 
-            <plugin>                                                                                                                                                                                                                        
-                <groupId>com.google.code.maven-replacer-plugin</groupId>                                                                                                                                                                     
-                <artifactId>replacer</artifactId>                                                                                                                                                                                            
-                <version>1.5.3</version>                                                                                                                                                                                                     
-                <executions>                                                                                                                                                                                                                 
-                    <execution>                                                                                                                                                                                                              
-                        <phase>generate-sources</phase>                                                                                                                                                                                      
-                        <goals>                                                                                                                                                                                                              
-                            <goal>replace</goal>                                                                                                                                                                                             
-                        </goals>                                                                                                                                                                                                             
-                    </execution>                                                                                                                                                                                                             
-                </executions>                                                                                                                                                                                                                
-                <configuration>                                                                                                                                                                                                              
-                    <filesToInclude>                                                                                                                                                                                                         
-                        ${basedir}/target/generated-sources/jflex/org/opensolaris/opengrok/analysis/java/JavaSymbolTokenizer.java,${basedir}/target/generated-sources/jflex/org/opensolaris/opengrok/analysis/javascript/JavaScriptSymbolTokenizer.java,${basedir}/target/generated-sources/jflex/org/opensolaris/opengrok/analysis/plain/PlainFullTokenizer.java,${basedir}/target/generated-sources/jflex/org/opensolaris/opengrok/analysis/plain/PlainSymbolTokenizer.java             
-                    </filesToInclude>                                                                                                                                                                                                        
-                    <replacements>                                                                                                                                                                                                           
-                        <replacement>                                                                                                                                                                                                        
-                            <token>private static final int ZZ_BUFFERSIZE =</token>                                                                                                                                                          
-                            <value>private int ZZ_BUFFERSIZE =</value>                                                                                                                                                                       
-                        </replacement>                                                                                                                                                                                                       
-                        <replacement>                                                                                                                                                                                                        
-                            <token>int requested = zzBuffer\.length - zzEndRead;</token>                                                                                                                                                     
-                            <value>int requested = zzBuffer.length - zzEndRead - zzFinalHighSurrogate;</value>                                                                                                                               
-                        </replacement>                                                                                                                                                                                                       
-                        <replacement>                                                                                                                                                                                                        
-                            <token>(zzFinalHighSurrogate = 1;)(\r?\n)</token>                                                                                                                                                                
-                            <value>$1$2          if (numRead == 1) { return true; }$2</value>                                                                                                                                                
-                        </replacement>                                                                                                                                                                                                       
-                                                                                                                                                                                                                                             
-                        <replacement>                                                                                                                                                                                                        
-                            <token>[ \t]*/\* is the buffer big enough\? \*/\s+if \(zzCurrentPos >= zzBuffer\.length.*?\}[ \t]*\r?\n</token>                                                                                                  
-                            <value></value>                                                                                                                                                                                                  
-                        </replacement>                                                                                                                                                                                                       
-                        <!-- also revert 0 character check that got in with 1.6.1 : https://github.com/jflex-de/jflex/blob/master/jflex/examples/zero-reader/README.md -->                                                                                           
-                        <replacement>                                                                                                                                                                                                        
-                            <token>[ \t]*/\* not supposed to occur according to specification of java\.io\.Reader \*/\s+if \(numRead == 0.*?\}[ \t]*\r?\n</token>                                                                            
-                            <value></value>                                                                                                                                                                                                  
-                        </replacement>                                                                                                                                                                                                       
-                                                                                                                                                                                                                                             
-                    </replacements>                                                                                                                                                                                                          
-                    <regexFlags>                                                                                                                                                                                                      
-                        <regexFlag>DOTALL</regexFlag>                                                                                                                                                                                 
-                    </regexFlags>                                                                                                                                                                                                   
-                </configuration>                                                                                                                                                                                                             
-            </plugin>                                        
+
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <filesToInclude>
+                        ${basedir}/target/generated-sources/jflex/org/opensolaris/opengrok/analysis/java/JavaSymbolTokenizer.java,${basedir}/target/generated-sources/jflex/org/opensolaris/opengrok/analysis/javascript/JavaScriptSymbolTokenizer.java,${basedir}/target/generated-sources/jflex/org/opensolaris/opengrok/analysis/plain/PlainFullTokenizer.java,${basedir}/target/generated-sources/jflex/org/opensolaris/opengrok/analysis/plain/PlainSymbolTokenizer.java
+                    </filesToInclude>
+                    <replacements>
+                        <replacement>
+                            <token>private static final int ZZ_BUFFERSIZE =</token>
+                            <value>private int ZZ_BUFFERSIZE =</value>
+                        </replacement>
+                        <replacement>
+                            <token>int requested = zzBuffer\.length - zzEndRead;</token>
+                            <value>int requested = zzBuffer.length - zzEndRead - zzFinalHighSurrogate;</value>
+                        </replacement>
+                        <replacement>
+                            <token>(zzFinalHighSurrogate = 1;)(\r?\n)</token>
+                            <value>$1$2          if (numRead == 1) { return true; }$2</value>
+                        </replacement>
+
+                        <replacement>
+                            <token>[ \t]*/\* is the buffer big enough\? \*/\s+if \(zzCurrentPos >= zzBuffer\.length.*?\}[ \t]*\r?\n</token>
+                            <value></value>
+                        </replacement>
+                        <!-- also revert 0 character check that got in with 1.6.1 : https://github.com/jflex-de/jflex/blob/master/jflex/examples/zero-reader/README.md -->
+                        <replacement>
+                            <token>[ \t]*/\* not supposed to occur according to specification of java\.io\.Reader \*/\s+if \(numRead == 0.*?\}[ \t]*\r?\n</token>
+                            <value></value>
+                        </replacement>
+
+                    </replacements>
+                    <regexFlags>
+                        <regexFlag>DOTALL</regexFlag>
+                    </regexFlags>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
