--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,26 @@ Portions Copyright (c) 2018, Chris Fraire <cfraire@me.com>.
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.9</version>
+                <executions>
+			<!-- Prepare execution with Surefire -->
+			<execution>
+				<id>pre-unit-test</id>
+				<goals>
+					<goal>prepare-agent</goal>
+				</goals>
+				<configuration>
+					<propertyName>surefireArgLine</propertyName>
+				</configuration>
+			</execution>
+			<!-- Generate report after tests are run -->
+			<execution>
+				<id>post-unit-test</id>
+				<phase>test</phase>
+				<goals>
+					<goal>report</goal>
+				</goals>
+			</execution>
+                </executions>
             </plugin>
 	    <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -257,10 +277,28 @@ Portions Copyright (c) 2018, Chris Fraire <cfraire@me.com>.
                 </reportSets>
             </plugin>
             <plugin>
+		<!-- UNIT TEST RUNNER -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.20</version>
+		<configuration>
+			<argLine>${surefireArgLine}</argLine>
+		</configuration>
+		<executions>
+			<execution>
+				<id>run-unit-tests</id>
+				<goals>
+					<goal>test</goal>
+				</goals>
+			</execution>
+		</executions>
             </plugin>
+	    <!-- CODE COVERAGE PUBLISHER -->
+	    <plugin>
+		<groupId>org.eluder.coveralls</groupId>
+		<artifactId>coveralls-maven-plugin</artifactId>
+		<version>3.1.0</version>
+	    </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
