--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -58,6 +58,7 @@ Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
                   <systemPropertyVariables>
                       <junit-force-all>true</junit-force-all>
                   </systemPropertyVariables>
+	          <argLine>${surefireArgLine}</argLine>
               </configuration>
           </plugin>
         </plugins>
