avoid running the tests twice

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,8 @@ env:
 # in 'script' no matter if an individual command fails or not. This kludgy
 # looking shell incantation takes care of that.
 #
-script: "mvn -B -V verify"
-
-after_success:
- - mvn clean test jacoco:report org.eluder.coveralls:coveralls-maven-plugin:report
+script:
+ - mvn -B -V verify jacoco:report org.eluder.coveralls:coveralls-maven-plugin:report
 
 addons:
   coverity_scan:
