check index version before reindex fixes #2084

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+file.reference.junit-4.12.jar=lib/junit-4.12.jar
+file.reference.lucene-backward-codecs-7.3.0.jar=lib/lucene-backward-codecs-7.3.0.jar
 javac.external.vm=false
 jnlp.offline-allowed=false
 javadoc.splitindex=true
@@ -92,7 +94,9 @@ javac.classpath=\
     ${file.reference.lucene-queries.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
     ${file.reference.lucene-suggest.jar}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.lucene-backward-codecs-7.3.0.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
